--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -665,7 +665,8 @@ async function handleFormSubmission() {
     return false;
 }
 
- asyncfunction submitRequest() {
+ async function submitRequest() {
+submitRequest() {
       event.preventDefault();
     if (!validateModalName() || !validateModalEmployeeID() || !validateAssetName() || !validateReason()) {
         return false;
