--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -386,7 +386,8 @@
     <div class="modal" id="modal" role="dialog" aria-labelledby="modal-title">
         <div class="modal-content">
             <h3 id="modal-title" style="color: blue;">Request Additional Asset</h3>
-            <form id="asset-request-form" onsubmit="submitRequest();">
+            <form id="asset-request-form" onsubmit="submitRequest(event);">
+
                 <div class="form-group">
                     <label for="modal-emp-name">Employee Name</label>
                     <input type="text" id="modal-emp-name" name="modal-emp-name" required 
@@ -665,9 +666,9 @@ async function handleFormSubmission() {
     return false;
 }
 
- async function submitRequest() {
-submitRequest() {
-      event.preventDefault();
+ async function submitRequest(event) {
+    event.preventDefault();
+
     if (!validateModalName() || !validateModalEmployeeID() || !validateAssetName() || !validateReason()) {
         return false;
     }
